Add org.openrewrite.java.migrate.net.URLConstructorsToURIRecipes to reduce warnings