@@ -1,5 +1,6 @@
 package org.jabref.logic.importer.fetcher;
 
+import java.net.URI;
 import java.net.URL;
 import java.util.Optional;
 
@@ -23,7 +24,7 @@ class ACSTest {
         // DOI randomly chosen from https://pubs.acs.org/toc/acscii/0/0
         BibEntry entry = new BibEntry().withField(StandardField.DOI, "10.1021/acscentsci.4c00971");
         assertEquals(
-                Optional.of(new URL("https://pubs.acs.org/doi/pdf/10.1021/acscentsci.4c00971")),
+                Optional.of(URI.create("https://pubs.acs.org/doi/pdf/10.1021/acscentsci.4c00971").toURL()),
                 fetcher.findFullText(entry)
         );
     }
