@@ -2,6 +2,7 @@ package org.jabref.logic.net;
 
 import java.io.File;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
@@ -36,14 +37,14 @@ class URLDownloadTest {
 
     @Test
     void stringDownloadWithSetEncoding() throws Exception {
-        URLDownload dl = new URLDownload(new URL("http://www.google.com"));
+        URLDownload dl = new URLDownload(URI.create("http://www.google.com").toURL());
 
         assertTrue(dl.asString().contains("Google"), "google.com should contain google");
     }
 
     @Test
     void stringDownload() throws Exception {
-        URLDownload dl = new URLDownload(new URL("http://www.google.com"));
+        URLDownload dl = new URLDownload(URI.create("http://www.google.com").toURL());
 
         assertTrue(dl.asString(StandardCharsets.UTF_8).contains("Google"), "google.com should contain google");
     }
@@ -52,7 +53,7 @@ class URLDownloadTest {
     void fileDownload() throws Exception {
         File destination = File.createTempFile("jabref-test", ".html");
         try {
-            URLDownload dl = new URLDownload(new URL("http://www.google.com"));
+            URLDownload dl = new URLDownload(URI.create("http://www.google.com").toURL());
             dl.toFile(destination.toPath());
             assertTrue(destination.exists(), "file must exist");
         } finally {
@@ -65,14 +66,14 @@ class URLDownloadTest {
 
     @Test
     void determineMimeType() throws Exception {
-        URLDownload dl = new URLDownload(new URL("http://www.google.com"));
+        URLDownload dl = new URLDownload(URI.create("http://www.google.com").toURL());
 
         assertTrue(dl.getMimeType().get().startsWith("text/html"));
     }
 
     @Test
     void downloadToTemporaryFilePathWithoutFileSavesAsTmpFile() throws Exception {
-        URLDownload google = new URLDownload(new URL("http://www.google.com"));
+        URLDownload google = new URLDownload(URI.create("http://www.google.com").toURL());
 
         String path = google.toTemporaryFile().toString();
         assertTrue(path.endsWith(".tmp"), path);
@@ -80,7 +81,7 @@ class URLDownloadTest {
 
     @Test
     void downloadToTemporaryFileKeepsName() throws Exception {
-        URLDownload google = new URLDownload(new URL("https://github.com/JabRef/jabref/blob/main/LICENSE"));
+        URLDownload google = new URLDownload(URI.create("https://github.com/JabRef/jabref/blob/main/LICENSE").toURL());
 
         String path = google.toTemporaryFile().toString();
         assertTrue(path.contains("LICENSE"), path);
@@ -89,7 +90,7 @@ class URLDownloadTest {
     @Test
     @DisabledOnCIServer("CI Server is apparently blocked")
     void downloadOfFTPSucceeds() throws Exception {
-        URLDownload ftp = new URLDownload(new URL("ftp://ftp.informatik.uni-stuttgart.de/pub/library/ncstrl.ustuttgart_fi/INPROC-2016-15/INPROC-2016-15.pdf"));
+        URLDownload ftp = new URLDownload(URI.create("ftp://ftp.informatik.uni-stuttgart.de/pub/library/ncstrl.ustuttgart_fi/INPROC-2016-15/INPROC-2016-15.pdf").toURL());
 
         Path path = ftp.toTemporaryFile();
         assertNotNull(path);
@@ -97,7 +98,7 @@ class URLDownloadTest {
 
     @Test
     void downloadOfHttpSucceeds() throws Exception {
-        URLDownload ftp = new URLDownload(new URL("http://www.jabref.org"));
+        URLDownload ftp = new URLDownload(URI.create("http://www.jabref.org").toURL());
 
         Path path = ftp.toTemporaryFile();
         assertNotNull(path);
@@ -105,7 +106,7 @@ class URLDownloadTest {
 
     @Test
     void downloadOfHttpsSucceeds() throws Exception {
-        URLDownload ftp = new URLDownload(new URL("https://www.jabref.org"));
+        URLDownload ftp = new URLDownload(URI.create("https://www.jabref.org").toURL());
 
         Path path = ftp.toTemporaryFile();
         assertNotNull(path);
@@ -113,21 +114,21 @@ class URLDownloadTest {
 
     @Test
     void checkConnectionSuccess() throws MalformedURLException {
-        URLDownload google = new URLDownload(new URL("http://www.google.com"));
+        URLDownload google = new URLDownload(URI.create("http://www.google.com").toURL());
 
         assertTrue(google.canBeReached());
     }
 
     @Test
     void checkConnectionFail() throws MalformedURLException {
-        URLDownload nonsense = new URLDownload(new URL("http://nonsenseadddress"));
+        URLDownload nonsense = new URLDownload(URI.create("http://nonsenseadddress").toURL());
 
         assertThrows(UnirestException.class, nonsense::canBeReached);
     }
 
     @Test
     void connectTimeoutIsNeverNull() throws MalformedURLException {
-        URLDownload urlDownload = new URLDownload(new URL("http://www.example.com"));
+        URLDownload urlDownload = new URLDownload(URI.create("http://www.example.com").toURL());
         assertNotNull(urlDownload.getConnectTimeout(), "there's a non-null default by the constructor");
 
         urlDownload.setConnectTimeout(null);
@@ -136,13 +137,13 @@ class URLDownloadTest {
 
     @Test
     void test503ErrorThrowsFetcherServerException() throws Exception {
-        URLDownload urlDownload = new URLDownload(new URL("http://httpstat.us/503"));
+        URLDownload urlDownload = new URLDownload(URI.create("http://httpstat.us/503").toURL());
         assertThrows(FetcherServerException.class, urlDownload::asString);
     }
 
     @Test
     void test429ErrorThrowsFetcherClientException() throws Exception {
-        URLDownload urlDownload = new URLDownload(new URL("http://httpstat.us/429"));
+        URLDownload urlDownload = new URLDownload(URI.create("http://httpstat.us/429").toURL());
         assertThrows(FetcherClientException.class, urlDownload::asString);
     }
 
@@ -162,7 +163,7 @@ class URLDownloadTest {
                         .withHeader("Content-Type", "application/pdf")
                         .withBody(pdfContent)));
 
-        URLDownload urlDownload = new URLDownload(new URL("http://localhost:2222/redirect"));
+        URLDownload urlDownload = new URLDownload(URI.create("http://localhost:2222/redirect").toURL());
         Path downloadedFile = tempDir.resolve("download.pdf");
         urlDownload.toFile(downloadedFile);
         byte[] actual = Files.readAllBytes(downloadedFile);
